--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Decidim Install guide by Platoniq
 description: A step by step guide to install Decidim for newcommers
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://decidim-install.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/decidim-install/" # the subpath of your site, e.g. /blog
+url: "https://platoniq.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 theme: just-the-docs
 
