--- a/.github/workflows/install_script.yml
+++ b/.github/workflows/install_script.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           ./script/install-decidim.sh -u admin@example.org -p decidim123456 -f test
       - name: curl check
-        run: curl -Is http://localhost/ | head -1
+        run: curl -Is http://localhost/system/admins/sign_in | head -1
