--- a/.github/workflows/install_script.yml
+++ b/.github/workflows/install_script.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v2.0.0
         with:
           fetch-depth: 1
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: Preparation
         run: whereis realpath; echo $PATH
       - name: install
